added more references

--- a/references/dates/milestones.html
+++ b/references/dates/milestones.html
@@ -13,7 +13,7 @@
             color: #333;
         }
         .container {
-            max-width: 1200px;
+            max-width: 1400px;
             margin: 0 auto;
             background-color: #ffffff;
             padding: 30px;
@@ -59,6 +59,7 @@
         }
         .date-col { width: 120px; font-weight: 500; }
         .item-col { width: 60px; text-align: center; }
+        .chapter-col { width: 80px; text-align: center; font-weight: bold; color: #6c757d; }
         
         /* Specific column highlights */
         td:nth-child(6) { /* Matches column */
@@ -86,17 +87,19 @@
                 <th>Practicing</th>
                 <th>Having Matches</th>
                 <th>Other</th>
+                <th class="chapter-col">Chapter</th>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <td class="item-col">1</td>
-                <td>2025年6月8日</td>
+                <td>2025年6月15日</td>
                 <td><span class="bold">战队成立</span>：确定队名"机甲梦想家"、口号及分工</td>
                 <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
+                <td class="chapter-col"></td>
             </tr>
             <tr>
                 <td class="item-col">2</td>
@@ -106,6 +109,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
+                <td class="chapter-col"></td>
             </tr>
             <tr>
                 <td class="item-col">3</td>
@@ -115,6 +119,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
+                <td class="chapter-col">5</td>
             </tr>
             <tr>
                 <td class="item-col">4</td>
@@ -124,6 +129,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
+                <td class="chapter-col">6</td>
             </tr>
             <tr>
                 <td class="item-col">5</td>
@@ -133,6 +139,7 @@
                 <td>操控手熟悉按键操作；练习Pin的摆放</td>
                 <td></td>
                 <td></td>
+                <td class="chapter-col">6</td>
             </tr>
             <tr>
                 <td class="item-col">6</td>
@@ -142,6 +149,7 @@
                 <td>基础策略演练；完成91分堆叠练习</td>
                 <td></td>
                 <td></td>
+                <td class="chapter-col">6</td>
             </tr>
             <tr>
                 <td class="item-col">7</td>
@@ -151,6 +159,7 @@
                 <td>练习二层堆叠；控制换手时间</td>
                 <td></td>
                 <td></td>
+                <td class="chapter-col">6</td>
             </tr>
             <tr>
                 <td class="item-col">8</td>
@@ -160,6 +169,7 @@
                 <td>强化110分装填操作；开始计分训练</td>
                 <td></td>
                 <td></td>
+                <td class="chapter-col">6</td>
             </tr>
             <tr>
                 <td class="item-col">9</td>
@@ -169,6 +179,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
+                <td class="chapter-col">6</td>
             </tr>
             <tr>
                 <td class="item-col">10</td>
@@ -178,6 +189,7 @@
                 <td>全流程模拟实战演练</td>
                 <td></td>
                 <td>建外SOHO交流赛</td>
+                <td class="chapter-col">6</td>
             </tr>
             <tr>
                 <td class="item-col">11</td>
@@ -187,6 +199,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
+                <td class="chapter-col">6</td>
             </tr>
             <tr>
                 <td class="item-col">12</td>
@@ -196,6 +209,7 @@
                 <td>高强度满分训练；中心岛与三角区送Pin角度练习</td>
                 <td></td>
                 <td></td>
+                <td class="chapter-col">6</td>
             </tr>
             <tr>
                 <td class="item-col">13</td>
@@ -205,6 +219,7 @@
                 <td></td>
                 <td><span class="bold">胜炫北京城市赛 (VIQRC)</span><br>成绩：亚军/季军</td>
                 <td></td>
+                <td class="chapter-col">6</td>
             </tr>
             <tr>
                 <td class="item-col">14</td>
@@ -214,6 +229,7 @@
                 <td>周中训练增至3h；练习使用对讲机</td>
                 <td></td>
                 <td></td>
+                <td class="chapter-col"></td>
             </tr>
             <tr>
                 <td class="item-col">15</td>
@@ -223,6 +239,7 @@
                 <td></td>
                 <td><span class="bold">亚洲公开赛华北大区赛(一)</span></td>
                 <td></td>
+                <td class="chapter-col"></td>
             </tr>
             <tr>
                 <td class="item-col">16</td>
@@ -232,6 +249,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
+                <td class="chapter-col">7</td>
             </tr>
             <tr>
                 <td class="item-col">17</td>
@@ -241,6 +259,7 @@
                 <td>熟悉自动/手动场摆放；加强配合练习</td>
                 <td></td>
                 <td></td>
+                <td class="chapter-col">7</td>
             </tr>
             <tr>
                 <td class="item-col">18</td>
@@ -250,6 +269,7 @@
                 <td>高速移动堆叠测试；<br>边框扣Pin速度与准确性训练</td>
                 <td></td>
                 <td></td>
+                <td class="chapter-col">7</td>
             </tr>
             <tr>
                 <td class="item-col">19</td>
@@ -259,6 +279,7 @@
                 <td>手动转自动环节强化练习</td>
                 <td></td>
                 <td></td>
+                <td class="chapter-col">8</td>
             </tr>
             <tr>
                 <td class="item-col">20</td>
@@ -268,6 +289,7 @@
                 <td></td>
                 <td><span class="bold">首届北京校际联赛 (VIQRC-ES)</span><br>首次使用二代车参赛</td>
                 <td></td>
+                <td class="chapter-col">8</td>
             </tr>
             <tr>
                 <td class="item-col">21</td>
@@ -277,6 +299,7 @@
                 <td>赛前组织联队练习；技能赛手动/自动针对性训练</td>
                 <td></td>
                 <td>备赛教委市赛</td>
+                <td class="chapter-col">8</td>
             </tr>
         </tbody>
     </table>
