index.html: updated theme color

--- a/engineering_notebook/ch06.html
+++ b/engineering_notebook/ch06.html
@@ -141,7 +141,7 @@
 
     <!-- ================= PAGE 110: 训练日志-抓取优化 ================= -->
     <div class="sheet">
-        <h1>6.1 单元测试：底盘与抓取系统的物理调优</h1>
+        <h1>6.1 单元测试：底盘与抓取系统</h1>
 
         <p>在初期测试中，我们发现气动抓手在处理光滑的销钉（Pin）时存在滑移问题，且底盘存在不可忽视的漂移现象。</p>
 
