--- a/engineering_notebook/index.html
+++ b/engineering_notebook/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/styles/style.css">
 </head>
 
-<body class="theme-ch01">
+<body class="theme-index">
 
 
 
@@ -160,10 +160,6 @@
                         <li style="margin: 5px 0;">8.5 总结与未来计划</li>
                     </ul>
                 </li>
-
-                <!-- Glossary -->
-                <li style="margin: 5px 0;"><strong><a href="glossary.html">英语术语表</a></strong></li>
-
             </ul>
         </div>
         <div class="page-number">iii</div>
