index.html: updated table of contents

--- a/engineering_notebook/index.html
+++ b/engineering_notebook/index.html
@@ -38,11 +38,13 @@
 
     <!-- ================= TABLE OF CONTENTS PAGE 1 ================= -->
     <div class="sheet">
-        <h1 style="font-size: 48px; border: none; color: #005f9e; text-align: center; margin-bottom: 30px;">目&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;录</h1>
+        <h1 style="font-size: 48px; border: none; color: #005f9e; text-align: center; margin-bottom: 30px;">
+            目&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;录</h1>
         <!-- Centered Container for TOC -->
         <div style="display: flex; justify-content: center;">
-            <ul style="font-size: 18px; line-height: 1.4; list-style-type: none; padding: 0; width: fit-content; min-width: 50%;">
-                
+            <ul
+                style="font-size: 18px; line-height: 1.4; list-style-type: none; padding: 0; width: fit-content; min-width: 50%;">
+
                 <!-- Chapter 1 -->
                 <li style="margin: 5px 0;"><strong><a href="ch01.html">第一章：梦开始的地方</a></strong>
                     <ul style="padding-left: 20px; font-size: 16px; list-style-type: none;">
@@ -69,18 +71,6 @@
                         <li style="margin: 5px 0;">2.9 我们的战术推演</li>
                     </ul>
                 </li>
-
-            </ul>
-        </div>
-        <div class="page-number">i</div>
-    </div>
-
-    <!-- ================= TABLE OF CONTENTS PAGE 2 ================= -->
-    <div class="sheet">
-        <h1 style="font-size: 48px; border: none; color: #005f9e; text-align: center; margin-bottom: 30px;">目&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;录&nbsp; (续)</h1>
-        <div style="display: flex; justify-content: center;">
-            <ul style="font-size: 18px; line-height: 1.4; list-style-type: none; padding: 0; width: fit-content; min-width: 50%;">
-                
                 <!-- Chapter 3 -->
                 <li style="margin: 5px 0;"><strong><a href="ch03.html">第三章：我们的小小科学家之路</a></strong>
                     <ul style="padding-left: 20px; font-size: 16px; list-style-type: none;">
@@ -90,6 +80,20 @@
                         <li style="margin: 5px 0;">3.4 让机器人变聪明</li>
                     </ul>
                 </li>
+            </ul>
+        </div>
+        <div class="page-number">i</div>
+    </div>
+
+    <!-- ================= TABLE OF CONTENTS PAGE 2 ================= -->
+    <div class="sheet">
+        <h1 style="font-size: 48px; border: none; color: #005f9e; text-align: center; margin-bottom: 30px;">
+            目&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;录&nbsp; (续)</h1>
+        <div style="display: flex; justify-content: center;">
+            <ul
+                style="font-size: 18px; line-height: 1.4; list-style-type: none; padding: 0; width: fit-content; min-width: 50%;">
+
+
 
                 <!-- Chapter 4 -->
                 <li style="margin: 5px 0;"><strong><a href="ch04.html">第四章：概念设计与方案研讨</a></strong>
@@ -102,8 +106,8 @@
                     </ul>
                 </li>
 
-                 <!-- Chapter 5 -->
-                 <li style="margin: 5px 0;"><strong><a href="ch05.html">第五章：系统实施与搭建</a></strong>
+                <!-- Chapter 5 -->
+                <li style="margin: 5px 0;"><strong><a href="ch05.html">第五章：系统实施与搭建</a></strong>
                     <ul style="padding-left: 20px; font-size: 16px; list-style-type: none;">
                         <li style="margin: 5px 0;">5.1 资源统筹与端口规划</li>
                         <li style="margin: 5px 0;">5.2 机械装配：底盘系统</li>
@@ -114,17 +118,6 @@
                         <li style="margin: 5px 0;">5.7 传感器集成与自动化测试</li>
                     </ul>
                 </li>
-            </ul>
-        </div>
-        <div class="page-number">ii</div>
-    </div>
-
-    <!-- ================= TABLE OF CONTENTS PAGE 3 ================= -->
-    <div class="sheet">
-        <h1 style="font-size: 48px; border: none; color: #005f9e; text-align: center; margin-bottom: 30px;">目&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;录&nbsp; (续)</h1>
-        <div style="display: flex; justify-content: center;">
-            <ul style="font-size: 18px; line-height: 1.4; list-style-type: none; padding: 0; width: fit-content; min-width: 50%;">
-
                 <!-- Chapter 6 -->
                 <li style="margin: 5px 0;"><strong><a href="ch06.html">第六章：测试验证与实战评估</a></strong>
                     <ul style="padding-left: 20px; font-size: 16px; list-style-type: none;">
@@ -136,6 +129,20 @@
                         <li style="margin: 5px 0;">6.6 比赛数据与结果公示</li>
                     </ul>
                 </li>
+            </ul>
+        </div>
+        <div class="page-number">ii</div>
+    </div>
+
+    <!-- ================= TABLE OF CONTENTS PAGE 3 ================= -->
+    <div class="sheet">
+        <h1 style="font-size: 48px; border: none; color: #005f9e; text-align: center; margin-bottom: 30px;">
+            目&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;录&nbsp; (续)</h1>
+        <div style="display: flex; justify-content: center;">
+            <ul
+                style="font-size: 18px; line-height: 1.4; list-style-type: none; padding: 0; width: fit-content; min-width: 50%;">
+
+
 
                 <!-- Chapter 7 -->
                 <li style="margin: 5px 0;"><strong><a href="ch07.html">第七章：二代车的设计迭代</a></strong>
