ch07: minor fixes

--- a/engineering_notebook/ch07.html
+++ b/engineering_notebook/ch07.html
@@ -53,9 +53,9 @@
             padding: 0;
         }
         .log-list li {
-            margin-bottom: 20px;
-            padding-bottom: 20px;
-            border-bottom: 1px dashed #ddd;
+            margin-bottom: 10px;
+            padding-bottom: 1px;
+            /* border-bottom: 1px dashed #ddd; */
         }
         .log-list li:last-child {
             border-bottom: none;
@@ -106,7 +106,7 @@
                     本章节详细记录了战队基于一代车（Gen 1）的实战数据，研发并制造二代车（Gen 2）的全过程。
                 </p>
                 <p>
-                    针对8月12日总结会中提出的底盘过慢、电机过热以及堆叠不稳定等核心痛点，我们进行了深度的机械结构改良，并引入了更完善的自动化控制逻辑。
+                    针对8月城市赛中出现的问题，比如底盘过慢、电机过热以及堆叠不稳定等，我们进行了深度的机械结构改良，并引入了更完善的自动化控制逻辑。
                 </p>
                 <p>
                     <strong>本章核心任务：</strong> 打造一台通过性更强、操作更灵活、堆叠更稳定的进阶机型，备战北京校际联赛。
@@ -119,11 +119,11 @@
     <div class="sheet">
         <h1>7.1 迭代启动：从经验中改进</h1>
         
-        <p>在结束北京城市赛后，我们于 <strong>2025年8月12日</strong> 进行了深刻的复盘（见里程碑 #12），确立了二代车（Gen 2）的改进方向。</p>
+        <p>在结束北京城市赛后，我们进行了深刻的复盘，确立了二代车（Gen 2）的改进方向。</p>
 
         <div class="highlight-box type-purple">
             <h3>二代车核心设计目标 (Design Goals)</h3>
-            <p class="text-gray">基于 8月12日 训练总结提出的痛点：</p>
+            <!-- <p class="text-gray">基于 8月21日 比赛总结提出的痛点：</p> -->
             <ol style="line-height: 2;">
                 <li><strong>底盘提速与防卡顿：</strong> 解决一代车“移动速度过慢”及“装填区操作反向”的问题，提升全场游走能力。</li>
                 <li><strong>高塔堆叠优化：</strong> 针对“高塔 Beam 经常歪倒”的问题，需加长力臂，抬升高度。</li>
